--- a/templates/ajax/pm/view.html.twig
+++ b/templates/ajax/pm/view.html.twig
@@ -72,6 +72,11 @@
                                         <i class="fa fa-users"></i> {{ 'Teilnehmer'|trans({},'global') }}
                                     </div>
                                 </div>
+                                <div class="cell">
+                                    <div x-pm-action="block-sender" class="pm-button" id="block-single-button">
+                                        <i class="fa fa-shield-alt"></i> {{ 'Absender blockieren'|trans({},'global') }}
+                                    </div>
+                                </div>
                             </div>
 
                         </div>
@@ -158,6 +163,7 @@
 
 {% block js %}
     {{ parent() }}
+    {{ include('ajax/flash.html.twig') }}
     <script>
         (function() {
 
@@ -192,6 +198,10 @@
 
                     if (elem.getAttribute('x-userlist')) $.html.forEach('[x-pm-action="show-users"]', e => e.classList.remove('hidden'));
                     else $.html.forEach('[x-pm-action="show-users"]', e => e.classList.add('hidden'));
+
+                    if (elem.getAttribute('x-block'))
+                        $.html.forEach('[x-pm-action="block-sender"]', e => e.classList.remove('hidden'));
+                    else $.html.forEach('[x-pm-action="block-sender"]', e => e.classList.add('hidden'));
 
                     let editor = document.getElementById('global-pm-forum-editor');
                     if (editor) editor.innerText = '';
@@ -502,7 +512,6 @@
             });
 
             $.html.addEventListenerAll('[x-pm-action="show-users"]', 'click', function () {
-
                 const selected_thread = document.querySelector('ul.pm-conversation-list>li[x-editor].selected');
                 let container = document.getElementById('pm-user-list-container');
                 let target = document.getElementById('pm-user-list-payload');
@@ -517,8 +526,22 @@
                     target.innerHTML = '';
                     document.getElementById('pm-user-list-container').classList.add('hidden');
                 }
+            });
 
+            $.html.addEventListenerAll('[x-pm-action="block-sender"]', 'click', function (e,elem) {
+                const selected_thread = document.querySelector('ul.pm-conversation-list>li[x-block].selected');
+                if (!selected_thread) return;
 
+                const preamble = selected_thread.getAttribute('x-block-name')
+                    ? ( '{{ '%user% blockieren'|trans({},'global')|e('js') }}\n\n'.replace('%user%', selected_thread.getAttribute('x-block-name')) )
+                    : '';
+                if (confirm(preamble +
+                    '{{ 'Wenn du den Absender dieser Nachricht blockierst, kann dieser dir keine neuen Nachrichten schicken. Werdet ihr beide von einer dritten Person in eine Gruppennachricht hinzugefügt, so werden Beiträge des blockierten Spielers standartmäßig für dich versteckt.'|trans({},'global')|e('js') }}' +
+                    '\n\n{{ 'Möchtest du fortfahren?'|trans({},'global')|e('js') }}')) {
+                    $.ajax.easySend(selected_thread.getAttribute('x-block'), {}, function() {
+                        $.ajax.load( document.getElementById('post-office-content'), '{{ path('pm_view')|e('js') }}' );
+                    });
+                }
             });
 
             $.html.addEventListenerAll('[x-pm-action="trash-single"]', 'click', function () {
