--- a/assets/less/modules/map.less
+++ b/assets/less/modules/map.less
@@ -279,7 +279,9 @@ div.map_area {
         &.town:not(.devast)>div.icon { background: url("../../img/icons/map/map_zone_town.svg") center/contain no-repeat; }
         &.town.devast>div.icon { background: url("../../img/icons/map/map_zone_town_devast.svg") center/contain no-repeat; }
         &.ruin:not(.buried)>div.icon { background: url("../../img/icons/map/map_zone_ruin.svg") center/contain no-repeat; }
+        &.ruin:not(.buried).past>div.icon { background: url("../../img/icons/map/map_zone_ruin_past.svg") center/contain no-repeat; }
         &.ruin.buried>div.icon { background: url("../../img/icons/map/map_zone_buried.svg") center/contain no-repeat; }
+        &.ruin.buried.past>div.icon { background: url("../../img/icons/map/map_zone_buried_past.svg") center/contain no-repeat; }
         &.past   >div.icon { background: url("../../img/icons/map/map_zone_past.svg") center/contain no-repeat; }
         &.unknown>div.icon { background-image: url("../../img/icons/map/map_zone_unknown.png"); background-repeat: no-repeat; background-position: center; }
       }
