--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -34,11 +34,11 @@
       }
 
       &.log-entry-class-0 {}
-      &.log-entry-class-1 { background-color: #820000 }
-      &.log-entry-class-2 { background-color: #ad2714 }
+      &.log-entry-class-1 { background-color: #820000; }
+      &.log-entry-class-2 { background-color: #ad2714; }
       &.log-entry-class-3 { background-color: #965c36; font-weight: bold; }
-      &.log-entry-class-4 { background-color: #3b3249 }
-      &.log-entry-class-5 { background-color: #b05502 }
+      &.log-entry-class-4 { background-color: #3b3249; .log-part-content { font-style: italic; } }
+      &.log-entry-class-5 { background-color: #b05502; }
 
       &.log-entry-type-0  {}
       &.log-entry-type-1  {}
