--- a/templates/ajax/game/town/citizen.html.twig
+++ b/templates/ajax/game/town/citizen.html.twig
@@ -108,12 +108,15 @@
                                 {% else %}
                                     <em>{{ 'Truhe'|trans({},'game') }}</em><br />
                                 {% endif %}
+                                <ul class="inventory borderless">
                                 {% for item in citizen.home.chest.items %}
                                     {# @var \App\Entity\Item item #}
                                     {% if (citizen == me or not item.prototype.hideInForeignChest) %}
-                                        <img alt="{{ item.prototype.label|trans({},'items') }}" src="{{ asset('build/images/item/item_' ~ item.prototype.icon ~ '.gif') }}" />
+                                        {% embed "ajax/game/item.html.twig" with {'item': item, 'no_tooltip': true} %}{% endembed %}
                                     {% endif %}
                                 {% endfor %}
+                                </ul>
+
                             {% else %}
                                 <em>{{ 'Der Inhalt dieses Hauses wird durch Vorhänge an den Fenstern verdeckt...'|trans({},'game') }}</em>
                             {% endif %}
@@ -143,10 +146,14 @@
                         {% if citizen.home.chest.items|length == 0 %}
                             <em>{{ 'Leere Truhe'|trans({},'game') }}</em>
                         {% endif %}
-                        {% for item in citizen.home.chest.items %}
-                            {# @var \App\Entity\Item item #}
-                            <img alt="{{ item.prototype.label|trans({},'items') }}" src="{{ asset('build/images/item/item_' ~ item.prototype.icon ~ '.gif') }}" />
-                        {% endfor %}
+                        <ul class="inventory borderless">
+                            {% for item in citizen.home.chest.items %}
+                                {# @var \App\Entity\Item item #}
+                                {% if (citizen == me or not item.prototype.hideInForeignChest) %}
+                                    {% embed "ajax/game/item.html.twig" with {'item': item, 'no_tooltip': true, 'no_id': true} %}{% endembed %}
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
                         <div class="tooltip normal">
                             <strong class="warning">{{'Todesursache'|trans({}, 'game')}}</strong> : {{ citizen.causeOfDeath.label|trans({}, "game") }}
                         </div>
