--- a/templates/ajax/game/town/citizen_omniscience.html.twig
+++ b/templates/ajax/game/town/citizen_omniscience.html.twig
@@ -60,10 +60,14 @@
                         {% if citizen.infos.home.chest.items|length == 0 %}
                             <em>{{ 'Leere Truhe'|trans({},'game') }}</em>
                         {% endif %}
-                        {% for item in citizen.infos.home.chest.items %}
-                            {# @var \App\Entity\Item item #}
-                            <img alt="{{ item.prototype.label|trans({},'items') }}" src="{{ asset('build/images/item/item_' ~ item.prototype.icon ~ '.gif') }}" />
-                        {% endfor %}
+                        <ul class="inventory borderless">
+                            {% for item in citizen.infos.home.chest.items %}
+                                {# @var \App\Entity\Item item #}
+                                {% if (citizen == me or not item.prototype.hideInForeignChest) %}
+                                    {% embed "ajax/game/item.html.twig" with {'item': item, 'no_tooltip': true} %}{% endembed %}
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
                     {% else %}
                         <em>{{ 'Der Inhalt dieses Hauses wird durch Vorhänge an den Fenstern verdeckt...'|trans({},'game') }}</em>
                     {% endif %}
