--- a/templates/ajax/game/newspaper.html.twig
+++ b/templates/ajax/game/newspaper.html.twig
@@ -34,7 +34,7 @@
                                 {% else %}
                                     {% for citizen in gazette.death_inside %}
                                     <span>
-                                        <span x-ajax-href="{{ path('town_visit', {id: citizen.id}) }}" style="cursor: pointer; text-decoration: underline;">{{citizen.name}}</span>{% if loop.revindex0 > 0  %}, {% endif %}
+                                        <span x-ajax-href="{{ path('town_visit', {id: citizen.id}) }}" style="cursor: pointer; text-decoration: underline;">{{citizen.name}}</span>{% if not loop.last  %}, {% endif %}
                                         <div class="tooltip normal">
                                             <h1>{{'Todesursache'|trans({}, 'game')}}</h1>
                                             {{citizen.causeOfDeath.label|trans({}, 'game')}}
@@ -50,7 +50,7 @@
                                     </div>
                                     {% for citizen in gazette.death_outside %}
                                     <span>
-                                        <span x-ajax-href="{{ path('town_visit', {id: citizen.id}) }}" style="cursor: pointer; text-decoration: underline;">{{citizen.name}}</span>{% if loop.revindex0 > 0  %}, {% endif %}
+                                        <span x-ajax-href="{{ path('town_visit', {id: citizen.id}) }}" style="cursor: pointer; text-decoration: underline;">{{citizen.name}}</span>{% if not loop.last  %}, {% endif %}
                                         <div class="tooltip normal">
                                             <h1>{{'Todesursache'|trans({}, 'game')}}</h1>
                                             {{citizen.causeOfDeath.label|trans({}, 'game')}}
