Better color choice

--- a/assets/less/modules/constructions.less
+++ b/assets/less/modules/constructions.less
@@ -118,8 +118,8 @@ div.buildings {
     }
   }
   &.type_item_meat {
-    border-top: 1px solid #eb5830;
-    border-left: 5px solid #eb5830;
+    border-top: 1px solid #ff9073;
+    border-left: 5px solid #ff9073;
     &:before {
       background-image: url('../../img/building/construction/building_meat.png');
     }
@@ -154,8 +154,8 @@ div.buildings {
     }
   }
   &.type_small_spa4souls {
-    border-top: 1px solid #207754;
-    border-left: 5px solid #207754;
+    border-top: 1px solid #66c295;
+    border-left: 5px solid #66c295;
     &:before {
       background-image: url('../../img/building/construction/building_spa4souls.png');
     }
