--- a/templates/ajax/game/town/well.html.twig
+++ b/templates/ajax/game/town/well.html.twig
@@ -13,7 +13,7 @@
 {% block content %}
     {% set hour = "now"|date("G") %}
     <div class="row">
-        <div class="cell rw-12 town-banner town-banner-well time-{{ hour }} {% if town.isNight %}night{% endif %}"></div>
+        <div class="cell rw-12 town-banner town-banner-well time-{{ hour }} {% if conf.isNightTime %}night{% endif %}"></div>
     </div>
 
     {% if rations_left < 15 %}
