--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -34,7 +34,7 @@
 {% block content %}
     {% set hour = "now"|date("G") %}
     <div class="row">
-        <div class="cell rw-12 town-banner town-banner-home time-{{ hour }} {% if town.isNight %}night{% endif %}"></div>
+        <div class="cell rw-12 town-banner town-banner-home time-{{ hour }} {% if conf.isNightTime %}night{% endif %}"></div>
     </div>
 
     {# @var home \App\Entity\CitizenHome #}
