--- a/templates/ajax/game/town/town.html.twig
+++ b/templates/ajax/game/town/town.html.twig
@@ -255,7 +255,7 @@
                         {% endif %}
 
                     {% endif %}
-                    <div class="row town-menu {% if town.isNight %}night{% endif %}">
+                    <div class="row town-menu {% if conf.isNightTime %}night{% endif %}">
                         <div class="padded-small cell rw-12 town-overview {% if menu_section == '' %}selected{% endif %}">
                             <div x-ajax-href="{{ url('town_dashboard') }}"><img src="{{asset('build/images/icons/small_view.gif')}}" alt =""/>{% trans from 'game' %}Übersicht{% endtrans %}</div>
                         </div>
