--- a/templates/ajax/game/beyond/beyond.html.twig
+++ b/templates/ajax/game/beyond/beyond.html.twig
@@ -60,7 +60,7 @@
 
             {% if map_data is defined %}
                 <div class="row">
-                    <div class="cell background rw-12">
+                    <div class="cell background map-box rw-12">
                             {% embed "ajax/game/map.html.twig" with {
                                 'default_zoom': 0,
                                 'default_show_zone': true,
