--- a/assets/less/modules/map.less
+++ b/assets/less/modules/map.less
@@ -2,6 +2,8 @@
 
 @myhordes-map-background: #2e3a0c;
 
+@myhordes-map-footer: url(../../img/background/beyond/map_footer.png) left no-repeat;
+
 div.map_area {
   div.map {
     font-size: 0; background: @myhordes-map-background; overflow: hidden; padding-top: 100%; position: relative;
@@ -361,9 +363,10 @@ div.map_area {
     }
   }
   div.controls {
-    background: @myhordes-cell-header-background-color; height: 30px; padding: 1px 10px;
+    background: @myhordes-map-footer;
+    height: 16px;
     /*border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;*/
-    &>div.tilemap_controls {display: block};
+    &>div.tilemap_controls {display: block; height: 16px;};
     &>div.zonemap_controls {display: none};
     .hide-tags,
     .show-tags {
@@ -386,9 +389,23 @@ div.map_area {
     }
     &>.controls {
       &>div.tilemap_controls {display: none};
-      &>div.zonemap_controls {display: block};
+      &>div.zonemap_controls {display: block;};
     }
   }
+}
+
+.map_button {
+  padding-top: 1px !important;
+  padding-bottom: 1px !important;
+  float: left; /* otherwise it has a freaking top margin that isn't a margin and idk what it is and i don't want to know i spent 30 minutes on an invisible 6px margin */
+}
+
+.map_button_left {
+  margin-right: 4px;
+}
+
+.map_button_right {
+  margin-left: 4px;
 }
 
 .tooltip.tooltip-map {
