Apply new map-box background to help pages

--- a/templates/ajax/help/shell.html.twig
+++ b/templates/ajax/help/shell.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block ajax %}
     <div class="row">
-        <div class="padded-small cell rw-4 rw-sm-12">
+        <div class="padded-small map-box cell rw-4 rw-sm-12">
             <div class="row">
            		<a class="support" href="https://gitlab.com/eternal-twin/myhordes/myhordes/-/issues" target="_blank"><em>{{ 'Brauchst du Hilfe?'|trans({},'help') }}</em>{{ 'Besuche unsere Technische Supportseite'|trans({},'help') }}</a>
                 <ul class="HelpList">
