--- a/assets/less/modules/help.less
+++ b/assets/less/modules/help.less
@@ -9,8 +9,8 @@ ul {
         }
         li {
             list-style: none;
-            border-top: 1px solid #7e4d2a;
-            border-bottom: 1px solid #7e4d2a;
+            border-top: 1px solid transparent;
+            border-bottom: 1px solid transparent;
             &.main { margin-top: 10px; }
             &.active {
                 background-color: #696486;
