--- a/templates/ajax/game/beyond/beyond.html.twig
+++ b/templates/ajax/game/beyond/beyond.html.twig
@@ -156,7 +156,7 @@
             {% endif %}
             {% if ruin_map_data is defined %}
                 <div class="row">
-                        <div class="cell background rw-12">
+                        <div class="cell background map-box rw-12">
                             {% embed "ajax/game/ruin_map.html.twig" with {
                                 'map': ruin_map_data
                             } %}{% endembed %}
