--- a/templates/ajax/admin/towns/explorer.html.twig
+++ b/templates/ajax/admin/towns/explorer.html.twig
@@ -118,6 +118,12 @@
                                                 <option value="{{ url('admin_town_manage', {action: 'dbg_map_zombie_set', id: town.id}) }}" x-query="{{ 'Format: "{x0}/{y0}:{x1}/{y1},{zombies}" (Bereich) oder "{x}/{y},{zombies}" (einzelne Zone), zum Beispiel "-1/3:-4/2,5". Statt der Positionsangabe kann "all" verwendet werden. Statt einem numerischen Wert für die Zahl der Zombies ist folgendes ebenfalls gültig: "today" (Anzahl der Zombies beim letzten Tageswechsel), "initial" (Anzahl der Zombies an Tag 1).'|trans({},'admin') }}">{{ 'Zombies setzen'|trans({},'admin') }}</option>
                                                 <option value="{{ url('admin_town_manage', {action: 'dbg_adv_days', id: town.id}) }}" x-query="{{ 'Anzahl der Tage'|trans({},'admin') }}">{{ 'Vorspulen'|trans({},'admin') }}</option>
                                                 <option value="{{ url('admin_town_manage', {action: 'dbg_set_attack', id: town.id}) }}" x-query="{{ 'Format: {zombies} (heutiger Angriff) oder {tag}:{zombies} (Angriff an einem bestimmten Tag). Es können keine Tage in der Vergangenheit gewählt werden.'|trans({},'admin') }}">{{ 'Stärke des Angriffs setzen'|trans({},'admin') }}</option>
+                                                {% if not town.chaos %}
+                                                    <option value="{{ url('admin_town_manage', {action: 'dbg_toggle_chaos', id: town.id}) }}">{{ 'Chaos-Modus'|trans({},'admin') }}</option>
+                                                {% endif %}
+                                                {% if not town.devastated %}
+                                                    <option value="{{ url('admin_town_manage', {action: 'dbg_toggle_devas', id: town.id}) }}">{{ 'Stadt zerstören'|trans({},'admin') }}</option>
+                                                {% endif %}
                                             </optgroup>
                                         {% endif %}
                                     {% endif %}
